Cambios de Laura

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         </header>
         <main>
             <section>
-                <h1>Titulo 1</h1>
-                <h2>Titulo 2</h2>
-                <h3>Titulo 3</h3>
+                <h1>POLKA ES HERMOSA</h1>
+                <h2>Aunque se tire peditos</h2>
+                <h3>Pero aun asi la amamos</h3>
                 <p>En esta etiqueta se escriben párrafos</p>
                 <a href="#">Enlace</a>
                 <ul>
@@ -27,6 +27,9 @@
 					<li>Elemento 2</li>
 					<li>Elemento 3</li>
 				</ol>
+
+                <img src="hambur.JPG" alt="Esta es la imagen de una hamburguesa">
+                <figcaption>TE INVITO A COMER UNA HAMBURGUESA</figcaption>
             </section>
         </main>
         <footer>
