Se modifican estructuras para temas esteticos, quedan pendientes las imagenes/videos/audios

--- a/horarios.html
+++ b/horarios.html
@@ -8,14 +8,16 @@
     </head>
     <body>
         <header>
-            <nav>
-                <ul>
-                    <li><a href="index.html">🏠 INICIO</a></li>
-                    <li><a href="menu.html">📜 MENU</a></li>
-                    <li><a href="horarios.html">📅 HORARIOS</a></li>
-                    <li><a href="info.html">ℹ️ RESERVA YA!</a></li>
-                </ul>
-            </nav>
+            <center>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">🏠 INICIO</a></li>
+                        <li><a href="menu.html">📜 MENU</a></li>
+                        <li><a href="horarios.html">📅 HORARIOS</a></li>
+                        <li><a href="info.html">ℹ️ RESERVA YA!</a></li>
+                    </ul>
+                </nav>
+            </center>
         </header>
         <main>
             
