Se agregan los ultimos cambios con contenido multimedia

--- a/horarios.html
+++ b/horarios.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="Hermoso picnic de Manizales, con la mejor vista a la ciudad y paisajes hermosos.">
-        <title>PAGINA2 Picnic Mirador de Don Pedro </title>
+        <title>HORAIOS | Picnic Mirador de Don Pedro </title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -20,7 +20,9 @@
             </center>
         </header>
         <main>
-            
+            <center>
+            <img src="images/horarios.png" width="380px" height="760px" alt="Nuestros Horarios">
+            </center>   
         </main>
         <footer>
             <hr>
