--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="Hermoso picnic de Manizales, con la mejor vista a la ciudad y paisajes hermosos.">
-        <title>PAGINA2 Picnic Mirador de Don Pedro </title>
+        <title>MENU | Picnic Mirador de Don Pedro </title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -25,22 +25,16 @@
                 <!-- La etiqueta table se compone de 3 elementos, table para delimitar la tabla, tr para indicar filas, y td para indicar columnas-->
                 <tr>
                     <h3>MENU PICNIC MIRADOR DE DON PEDRO</h3>
-                    <td><h3>CATEGORIA 1</h3></td>
-                    <td><img src="" alt=""></td>
-                    <td><img src="" alt=""></td>
-                    <td><img src="" alt=""></td>
+                    <td><h3>🍔🍟Comidas</h3></td>
+                    <td><img src="images/comidas.jpeg" width="480px" height="360px" alt="Menu de comidas"></td>
                 </tr>
                 <tr>
-                    <td><h3>CATEGORIA 2</h3></td>
-                    <td><img src="" alt=""></td>
-                    <td><img src="" alt=""></td>
-                    <td><img src="" alt=""></td>
+                    <td><h3>🍻🥂Bebidas Frias</h3></td>
+                    <td><img src="images/bebifri.jpeg" width="480px" height="360px" alt="Menu de Bebidas Frias"></td>
                 </tr>
                 <tr>
-                    <td><h3>CATEGORIA 3</h3></td>
-                    <td><img src="" alt=""></td>
-                    <td><img src="" alt=""></td>
-                    <td><img src="" alt=""></td>
+                    <td><h3>☕🍵Postres y Bebidas Calientes</h3></td>
+                    <td><img src="images/bebical.jpeg"  width="480px" height="360px" alt="Menu de Bebidas Calientes"></td>
                 </tr>
             </table></center>
     
